--- a/type_theory_and_semantics/report.tex
+++ b/type_theory_and_semantics/report.tex
@@ -19,7 +19,7 @@
 
 \begin{document}
 
-\title{Progress Report}
+\title{Progress Report - Independent Study}
 \author{Atreyee Ghosal}
 \date{1st October 2018}
 \maketitle
@@ -44,39 +44,63 @@ The "surface" meaning of a linguistic element, what the element maps to in conce
 
 \subsection{Frege's Principle of Compositionality}
 
+This interpretation is a necessary constraint on both the syntactic and semantic algebras of a language.
 
-\subparagraph{Notes}
+The Principle of Compositionality:\\
+The meaning of a complex expression is a function of the meanings of its parts and of the way they are syntactically combined.
 
-The crux of my reading on montague semantics is that "It does some quite cool things, and if you twist and contrive it in ways that it was probably never meant to be twisted, it does cooler things." In some sense, what is "montague semantics", where does it end, and where does it begin? \break As such, it seems that following the textbook is the best thing to do now; but the textbook follows montague's method, which is "Define a very specific fragment of english that takes care of very specific linguistic phenomena, and then define a further twisting of montague semantics for it." Given that the current work done in the field is over entire corpuses, and eschews this step-by-linguistic-step mechanism... well, there are flaws with both approaches, I'll read this. \break Well, isn't the point of this is to study both the data-driven and the rule- (or logic-) driven ends, and see which one works out first? :P
+It is to be noted that "syntactically combined" need not refer directly to the surface-level syntax of a language; it can be an intermediate logical/semantic representation language that stands in between the surface structure of an utterance and its meaning.
+
+Example: phrase structure trees- the individual nodes and the way they are combined in the graph gives us the meaning of a sentence. Also, on the same principle: dependency trees- the nodes are objects and their arc labels syntactically combine them.
 
 \subsection{The Syntactic Algebra}
 
-\subparagraph{Note}
+The syntactic algebra contains elements (expressions) and operations which apply to tuples of expressions to yield other expressions; the language, in the simplest case, is the set of all expressions which can be formed by starting from some basic expressions (the generators of the algebra) and applying operations in all possible ways.
+
+In practice, of course, there are syntactic and semantic constraints on which operators can be applied to which elements. See: selectional restrictions.
+
+\subparagraph{A Question}
 Are the words "algebra", "logic system", "calculus" etc used interchangably here? One of these words would be more directly understandable for the modern reader.
 
 \subsection{The Semantic Algebra}
 
-\subsection{What is Meaning?}
+The semantic algebra contains denotations, and operations that apply to tuples of denotations to yield other denotations.
+
+\subsection{What is Meaning/Denotation?}
 
 \subsubsection{According To Montague}
 
-The meaning, or denotation, of a sentence is the function from possible worlds/moments of time, to truth values.
+The meaning, or denotation, of a sentence is the function from possible worlds/moments of time, to truth values. As in: \\
+\\
+\textit{Denotation Function : \{ States Of A Given World \} $\rightarrow$ \{ Boolean Truth Value \} }
 
 \subsubsection{Another Interpretation: Meaning as A Change In State}
 
 \begin{equation}
 x := e  ::  \lambda S . S [ x \mapsto \llbracket e \rrbracket ]
 \end{equation}
- Where state is a function of \textit{s}?
-
-\subparagraph{Meeting Notes}
-There was a discussion with regards to this during the meeting on the 27th of September, 2018. 
+ Where state is a function of \textit{s}? 
 
 \section{Basic Categorial Grammar}
 
-\subsection{Syntactic Categories and Semantic Types}
+The fundamental notion of basic categorial grammar is that linguistic signs can be complete or not complete. Under that perspective, grammatical composition can be described as the process of completing incomplete linguistic signs.
 
-\subsubsection{Cateoogry to Type Correspondence}
+\subsection{Syntactic Categories}
+
+Syntactic categories are of two types:
+
+\begin{itemize}
+\item[Complete]
+Examples in our fragment: np, s.
+\item[Incomplete]
+Examples in our fragment: (np$\backslash$s)/np
+\end{itemize}
+
+\subsection{Semantic Types}
+
+The syntactic category of a linguistic sign specifies the type of semantic denotation the sign has. This is expressed through category-to-type correspondence:
+
+\subsubsection{Category to Type Correspondence}
 
 A mapping from a set of categories to a set of types.
 
@@ -88,6 +112,13 @@ m \in Types \\
 \end{split}
 \end{equation}
 
+A formal definition:
+
+\subparagraph{Category To Type Correspondence}
+Let $\tau$ be a function from a set of Categories to a set of Types. $\tau$ is a correspondence function iff: 
+\begin{equation}
+\tau ( \alpha \backslash \beta ) = \tau ( \beta \backslash \alpha ) = \langle \tau ( \alpha ), \tau ( \beta ) \rangle
+\end{equation}
 
 \subsubsection{Syntactic Categories: Why?}
 
@@ -95,22 +126,31 @@ A tentative answer to the above question based on my reading:
 
 \begin{itemize}
 \item
-Syntactic categories: positional
+Syntactic categories offer a way to interpret positional arguments. For example: verb arguments in English are positional.
 \item
-Syntactic categories concern themselves with the vagaries of syntax, which often have no effect on the deeper meaning representation. Therefore, there can be a many-to-one mapping from categories to semantic types
+Syntactic categories concern themselves with syntactic phenomena, which often have no effect on the deeper meaning of a sentence. Therefore, there can be a many-to-one mapping from categories to semantic types. For example: \\
+"I picked a lock." \\
+"A lock was picked by me." \\
+Both the above sentences have the same meaning and same categories for the noun phrases "I" and "a lock", but different categories for the verbs as the role of the first/second noun phrases with relation to the verb are different.
 \end{itemize}
 
 \subsubsection{Semantic Types: Why?}
 
+Categories denote a set of expressions, whereas Types denote a set of meanings.
+\\
+\fbox{Note: Is "denote" the correct term to use here?}
+\\
+Semantic types are useful because:
+
 \begin{itemize}
 \item
-Restricts the possible denotations of a linguistic object. Therefore, a linguistic object in, say, category \textbf{A} can only denote objects of type \textbf{B}, where $A \Rightarrow B$, or "A \textit{maps to} B".
+The semantic type corresponding to the category of a linguistic object restricts the possible denotations of the linguistic object. Therefore, a linguistic object in, say, category \textbf{A} can only denote objects of type \textbf{B}, where A \emph{corresponds to} B, or $\tau ( A ) = B$. For the definition of $\tau$, see category to type correspondence above.
 \end{itemize}
 
 \subsection{Defining Logic, Feature by Linguistic Feature}
 
-\subparagraph{Observation}
-The method here is that- linguistic features (via "fragments" of English) are considered, and then a syntactic grammar is constructed to account for that feature, to which a semantic operation is mapped. However, basic categories cannot vary according to the fragment- thus, for example, the category of "Alice" in "Alice ate an ice-cream" would need to be the same as the category of "Alice" in "Alice and some people were walking."
+The method used here is that- linguistic features (via "fragments" of English) are considered, and then a syntactic grammar is constructed to account for that feature, to which a semantic operation is mapped. However, basic categories cannot vary according to the fragment- thus, for example, the category of "Alice" in "Alice ate an ice-cream" would need to be the same as the category of "Alice" in "Alice and some people were walking." \\
+Two examples of the above method are:
  
 \subsubsection{Combinators and Co-Ordination}
 
@@ -154,15 +194,6 @@ With the quantifier able to be placed to the left or to the right of x.
 with anything? Why are we using a lambda function to \emph{lift} a
 type/category/catetype?
 
-\subsection{Relation To Context Free Grammars}
-
-Basic categorial grammars can be related to context free grammars.
-
-\subparagraph{Note:} I do not see how this correlation helps.
-
-
-\section{The Category-Type Distinction: Syntax and Semantics}
-
 
 \section{Parse Trees as Proofs}
 
@@ -170,4 +201,54 @@ An useful part of in-meeting discussion! The concept of parse trees as proofs, a
 
 And helped me understand the bit about a syntax tree as a deduction system.
 
+Proofs, or derivations, are written in \emph{succedent} format, where \textbf{lexical entries} are the premises/axioms and appear at the leaves of the proof tree. 
+
+\subsection{Structural Ambiguity as Multiple Proofs}
+
+Structural or syntactic ambiguity- i.e: when a sentence has more than one possible syntax tree, each corresponding to a different end "meaning" of the sentence- can be thought of as multiple proofs on the same set of axioms. Take, for example, the sentence \\
+\textbf{He saw Ram with binoculars.}
+
+\begin{equation}
+\cfrac
+{	\cfrac {he} {np} 
+ 	\cfrac 
+    {	\cfrac {saw} {np/s \backslash np} 
+     	\cfrac
+	    {	\cfrac {ram} {np \backslash pp}
+	        \cfrac 
+	    	{	\cfrac {with} {prep \backslash np}
+	    	 	\cfrac {binoculars} {np}
+	    	} 
+	    	{pp}
+	    }
+	    {np}
+	}
+	{np/s}
+} 
+{s}
+\end{equation}
+
+Another interpretation can be (note: to denote attachment, the prepositional phrase "with binoculars" has been shifted to attach to the verb. This would be handled differently in a proper phrase structure grammar, which BCG seems to attempt to imitate, but I do not know what the BCG solution to attachment/shifting issues is):
+
+\begin{equation}
+\cfrac
+{	\cfrac {he} {np} 
+ 	\cfrac 
+    {	\cfrac {saw} {np/s \backslash np \backslash pp}
+    	\cfrac 
+	    {	\cfrac {with} {prep \backslash np}
+	    	\cfrac {binoculars} {np}
+	    } 
+		{pp}
+	}
+	{np/s \backslash np} 
+    \cfrac
+	{	\cfrac {ram} {np}
+	}
+	{np}
+} 
+{s}
+\end{equation}
+
+Fact: this type of structural ambiguity is known as the \textbf{Prepositional Phrase Attachment Problem}
 \end{document}
