--- a/language_typology_and_universals/india-as-a-linguistic-area.org
+++ b/language_typology_and_universals/india-as-a-linguistic-area.org
@@ -1,5 +1,5 @@
 #+TITLE: India as a Linguistic Area
-#+AUTHOR: KW
+#+AUTHOR: Atreyee Ghosal
 
 
 * M.B. Emmeneau
@@ -12,9 +12,25 @@ According to Emmeneau, the term 'linguistic area' may be defined as meaning an a
 Geographical, and not just genetic, closeness can lead to diffusion of features between languages.
 ** Linguistic Features Studied
 
+
+Emmeneau attempts to demonstrate that India can be considered a linguistic area by bringing up examples of linguistic features that are present, in various forms, across Indian languages from all three families.
+
 *** Vocabulary Borrowings
+
+    - Dravidian languages have many borrowed words from all periods of Indo-Aryan languages- from Sanskrit, Middle Indo-Aryan and Modern Indo-Aryan.
+    - Munda languages have features borrowed chiefly from modern Indo-Aryan
+    - Indo-Aryan has many borrowings from Dravidian, but they end at the pre-Christian era, as after that Dravidian speakers became rare in North India
+    - Borrowings from Munda into the other two families are difficult to identify
+
 *** Retroflex, cerebral or domal consonants
-*** Marathi Palatal Isogloss
+
+    - Most languages in India have a set of retroflex, cerebral or domal consonants in contrast with the dental consonants
+    - Retroflexes always include: stops and nasal consonants
+    - In some languages, they also include: sibilants, lateral consonants, trills etc.
+    - One of the Munda languages- which is hypothesized to be archaic- does not have this feature, so it is probably not proto-Munda
+    - Early sanskrit shows retroflex phonemes, but they are not, however, proto-Indo-European (as they are not found in other early indo-European languages)
+    - Out of the sanskrit occurrences, certain ones are conditioned, others are reflexes of certain sanskrit consonants
+    - In Dravidian languages, we can see by early proto-dravidian scripts that retroflexes are in contrast with dentals, and not a conditioned feature of the language
 *** Features that happened all at once
 
 **** Loss of the dual
@@ -22,13 +38,66 @@ Geographical, and not just genetic, closeness can lead to diffusion of features 
 **** Absence of Prepositions 
 
 *** Gerund 
-*** Nominalized/Adjectivized form of verb - construction
+
+    - A gerund is a construction in which verb stems or non-finite verb forms are strung together in a series which is closed by a predicate verb-form
+    - All three language families have gerund forms
+    - This is one of the syntactic forms that Sanskrit has, that other Indo-European languages don't have
+
+*** (Nominalized/Adjectivized verb) + (postposition)
+
+    - eg: /pyaar karne ka <something>/ - "<something> of loving"
+    - This is present in early Sanskrit
+    - It is not present in early Dravidian but in later Dravidian
+    - It is also present in Munda
+
 *** Echo-words
+
+    - CVX + CV(-gi/-u) or CVC + (m-)VC
+    - Meaning: <original word> and the like
+    - Nearly all Dravidian languages have the -gi echo
+    - This trait is not Indo-european
+    - Is found in all three languages, so Indo-Aryan probably received it from other families
+
 *** Classifiers/Quantifiers
 
+    - Spread from the Indo-Aryan language family (although it is to be noted that this is not from Indo-European)
 The main contribution of M.B Emmeneau to this paper.
+
 * Anvita Abbi
 
+** Areal Linguistics
+** Common Features
+
+*** Phonological
+
+**** Retroflexes
+**** Voiceless Aspirated Sounds
+**** Syllable-Timed Words
+
+In place of stress-aspirated words.
+
+*** Morphology
+
+**** Transitive Verb -(derivation)-> Causative Verb
+
+Nearly all languages offer morphologically-derived pairs of transitive and causative verbs.
+**** Expressives
+**** Echo Words
+**** Reduplication
+
+*** Syntax
+
+**** Pro-Drop
+**** SOV Word Order
+**** Explicator Compound Verb
+**** Converbs/Conjunctive Participles
+**** Non-Agentive Subjects
+
+
+** Weak/Strong Linguistic Areas
+** Simultaneous Convergence/Divergence
+** Redundancies in Grammar -> Common Grammar
+** Linguistic Microareas
 
 * Language Families of the Indian subcontinent
 
