added to paper summary

--- a/language_typology_and_universals/dakhini_urdu_morphology.tex
+++ b/language_typology_and_universals/dakhini_urdu_morphology.tex
@@ -23,17 +23,86 @@ Enter a short summary here. What topic do you want to investigate and why? What 
 
 \subsection{Three Classes of Nouns}
 
-\subsubsection{Class 1: Marked Masculine, Suffixed}
-\subsubsection{Unmarked Masculine/Feminine, Plural Suffix}
-\subsubsection{Unmarked Masculine/Feminine, Zero Suffix}
+\subsubsection{Class 1: Marked Masculine Noun}
 
-\subsection{A Fourth Class: Postposition}
+\begin{itemize}
+\item
+This type of noun terminates in the suffixes:
+	\begin{itemize}
+	\item
+	\emph{-aa} in the nominative singular
+	\item
+	\emph{-e} in the nominative plural and in the oblique singular
+	\end{itemize}
+\item[Eg:  ]
+	\begin{itemize}
+	\item[child]
+	baccha (singular), bacche (plural)
+	\item[cloth]
+	kapRaa (singular), kapRe (plural)
+	\end{itemize}
+\end{itemize}
+
+\subsubsection{Unmarked Masculine/Feminine Noun}
+
+\begin{itemize}
+\item 
+These nouns occur with the plural suffix \emph{-aaN}
+\item[Eg:  ]
+	\begin{itemize}
+	\item[apple]
+	seb (singular), sebaaN (plural)
+	\item[book]
+	kitaab (singular), kitabaaN (plural) 
+	\end{itemize}
+\end{itemize}
+
+\subsubsection{Unmarked Masculine/Feminine}
+
+\begin{itemize}
+\item
+These nouns occur with a zero plural suffix.
+\item[Eg:  ]
+	\begin{itemize}
+	\item[aunts]
+	xaalaa (singular), xaalaa(plural)
+	\item[mango]
+	aam (singular), aam (plural)
+	\end{itemize}
+\end{itemize}
+
+\subsection{Postposition Class}
+
+The postposition class is the class of, well, postpositions. This class influences nouns as all nouns occur with oblique-case suffixes before all members of this class. This is a closed class of functional morphemes, containing:
+
+\begin{itemize}
+\item
+kaa/kii/ke, 'of'
+\item
+kuu/ko, 'to'
+\item
+meN, 'in'
+\item
+pe, 'on'
+\item
+tak, 'until'
+\end{itemize}
 
 \subsection{Variations}
 
+ The below are the variations shown in the noun class between the different 'systems' of Dakhini rules.
+ 
 \subsubsection{Weakening of Gender Distinction}
+
+Unmarked feminine nouns and loan words are often regarded as maasculine in gender, even though this may not be grammatically correct within the main system.
+
 \subsubsection{Assimilation into Class 3}
+
+A number of nouns that belong to classes 1 and 2 are treated by speakers as if they belong to class 3, deriving their plurals with the addition of a zero suffix.
+
 \subsubsection{Interference from Standard Urdu}
+
+Standard urdu contains a practice where feminine nouns are classed separately from masculine nouns using suffixes. Dakhini speakers who have studied standard Urdu in schools occasionally attempt to use these suffixes in speech.
 
 \section{Adjectives}
 
@@ -76,7 +145,16 @@ Four types of verb constructions:
 
 \subsection{Formed From Present Participle}
 
+\begin{itemize}
+\item
+The present participle of a verb is formed by the suffixation of \emph{-taa/-tii/-tee} to the verb root.
+\item
+Participles agree in gender and number with the subject of the sentence.
+\end{itemize}
+
 \subsubsection{Present Participle = Indefinite Tense}
+
+The present participle occurs in sentences as the infinite tense.
 \subsubsection{Present Participle + Past Auxiliary = Imperfect Tense}
 \subsubsection{Adverbial: Present Participle ending in -te}
 
