added paper summary assignment. finally -k

--- a/language_typology_and_universals/dakhini_urdu_morphology.tex
+++ b/language_typology_and_universals/dakhini_urdu_morphology.tex
@@ -106,38 +106,84 @@ Standard urdu contains a practice where feminine nouns are classed separately fr
 
 \section{Adjectives}
 
-\subsection{Two Classes}
+Adjectives fall into two classes: Marked and Unmarked.
 
-\subsubsection{Marked}
+\subsection{Marked}
 
-\subsubsection{Unmarked}
+\begin{itemize}
+\item
+Marked adjectives terminate in \emph{-aa/-e/-ii}.
+\item
+Marked adjectives agree in gender, number and case with the nouns they modify.
+\item
+This pattern of marked adjectives is similar to that found in standard urdu.
+\end{itemize}
+
+\subsection{Unmarked}
+
+Unmarked adjectives do not agree with the nouns that they modify, and do not have any regular morphology.
 
 \section{Personal Pronouns}
 
-In free variation; however no single speaker's idiolect includes all the forms listed.
+In free variation; however no single speaker's idiolect includes all the forms of pronouns listed.
 
 \subsection{First Person}
 
+\begin{itemize}
+\item
+Nominative: maiN
+\item
+Oblique: muje
+\end{itemize}
+
 \subsection{Second Person}
 
+\begin{itemize}
+\item
+Nominative: tuu
+\item
+Oblique: tuje
+\end{itemize}
+
 \subsection{Third Person}
+
+\begin{itemize}
+\item
+Proximate Nominative: ine/ye
+\item
+Proximate Oblique: ise/is
+\item
+Distant Nominative: une/wo
+\item
+Distant Oblique: use/us
+\end{itemize}
 
 The existence of two types of third person pronouns is hypothesized to be because of the disappearance of the \emph{Agentive Construction} in the past tense - i.e: standard urdu \textit{ne} --> \textit{ine, une}
 
 \textit{hameN, tumheN} --> the usage of these as nominative rather than oblique forms appears to be a Dakhini innovation
 
-\subsubsection{Proximate}
-\subsubsection{Distant}
+
 
 \section{Relative and Interrogative Pronouns}
 
-\subsection{Reflective Adjective}
+Data concerning relative and interrogative pronouns is less, but we present the results that could be gathered.
+
+The following interrogative pronouns occur in the Dakhini corpus: jo, kaun and kis kuu.
+
+\subsection{Reflexive Adjective}
+
+The reflexive adjective \emph{apnaa/apnii/apne} occurs.
 
 \subsection{Variations}
 
-\subsubsection{Closer To The Paradigm = Wider Variety}
-\subsubsection{Substitution of Plural for Singular}
-\subsubsection{Interference From Standard Urdu}
+\begin{itemize}
+\item
+Closer To The Paradigm = Wider Variety: speakers whose idiolects approach most closely to the primary system of Dakhini Urdu employ the widest variety of pronouns.
+\item
+Substitution of Plural for Singular: \emph{ham} is sometimes substituted for \emph{maiN}
+\item
+Interference From Standard Urdu: the standard Urdu second person honorific pronoun \emph{aap} is sometimes used by Dakhini speakers, particularly by those who have studied standard Urdu in school.
+\end{itemize}
 
 \section{Verbs}
 
@@ -154,11 +200,36 @@ Participles agree in gender and number with the subject of the sentence.
 
 \subsubsection{Present Participle = Indefinite Tense}
 
-The present participle occurs in sentences as the infinite tense.
+\begin{itemize}
+\item
+The present participle occurs as the indefinite tense with the auxiliary 'hai' in declarative sentences.
+\item
+The present participle occurs as the indefinite tense without the auxiliary in interrogative and negative sentences
+\item[Eg:   ]
+	\begin{itemize}
+	\item
+	main jata hoon \textit{I go}
+	\item
+	tu kya jata \textit{you (interrogative marker) go}
+	\end{itemize}
+\end{itemize}
+
 \subsubsection{Present Participle + Past Auxiliary = Imperfect Tense}
+
+\begin{itemize}
+\item
+An imperfect tense is formed from the present participle with the past auxiliary \emph{thaa/thii/the}
+\item
+Example: ghar pe saawkaraaN aate the \textit{The merchants used to come to our house}
+\end{itemize}
+
 \subsubsection{Adverbial: Present Participle ending in -te}
 
-To describe the duration/context of an action.
+\begin{itemize}
+\item
+The present participle terminating in \emph{-te} is used adverbially to indicate duration or to describe the context of an action.
+\end{itemize}
+
 
 \subsubsection{Variations}
 
@@ -168,15 +239,46 @@ Non-Use of the auxiliary hai in indefinite tense statements
 \item
 Disappearance of the feminine plural suffix
 \item
-Interference from standard urdu
+Interference from standard urdu: occasionally the free form of the auxiliary occurs after present participles in Dakhini.
 \end{itemize}
 
 \subsection{Formed From Past Participle}
 
+\begin{itemize}
+\item
+Past participle is formed from the suffixing of \emph{-aa/-ii/-a/-iiN} to the verb root.
+\item
+Past participle agrees with gender and number of the subject noun.
+\end{itemize}
+
 \subsubsection{Past Participle = Past Tense}
-\subsubsection{Past Participle + Bound Auxiliary = Past Tense}
+
+\begin{itemize}
+\item
+The past tense can be formed by the past participle either occurring alone
+\item
+Or occurring with the auxiliary 'hai' bound to the verb stem.
+\end{itemize}
+
 \subsubsection{Past Participle + Past Auxiliary = Pluperfect Tense}
+
+\begin{itemize}
+\item
+A pluperfect tense is formed from the past participle with the past auxiliary \emph{thaa/thii/the}
+\end{itemize}
+
 \subsubsection{Adverbial: Past Participle ending in -e}
+
+Past participles terminating in -e are used adverbially to denote:
+
+\begin{itemize}
+\item
+Context of an action
+\item
+Followed by 'so' to denote the context of an action
+\item
+Followed by 'tak', meaning 'until'
+\end{itemize}
 
 \subsubsection{Variations}
 
@@ -184,14 +286,29 @@ Interference from standard urdu
 \item
 Non-use of the auxiliary \textit{hai} in past tense constructions
 \item
-Disappearance of the feminine plural
+Disappearance of the feminine plural form
 \end{itemize}
 
 \subsection{Based on Verb Root}
 
-\subsubsection{Root + raa = Continuous Present Tense}
+
+\subsubsection{Root + raa + hai = Continuous Present Tense}
+
+\begin{itemize}
+\item
+The continuous present tense is constructed from the verb root and a postposition auxiliary \emph{raa/rii/re/rai}, suffixed with a bound form of the auxiliary 'hai'
+\end{itemize}
+
 \subsubsection{Root + raa + thaa = Past Continuous Tense}
+
+\begin{itemize}
+\item
+The continuous past tense is constructed from the verb root and a postposition auxiliary \emph{raa/rii/re/rai}, suffixed with a bound form of the auxiliary \emph{thaa/thii/the}
+\end{itemize}
+
 \subsubsection{Adverbial Construction: Special}
+
+The root verb itself is used as an adverbial to denote the last of any sequence of actions occurring in a consequent time context.
 
 \subsubsection{Variations}
 
@@ -201,7 +318,7 @@ Non-use of the auxiliary \textit{hai} in the formation of the present continuous
 \item
 Two alternate forms of regular primary system constructions are found
 \item
-Interference from standard urdu
+Interference from standard urdu: a number of people occasionally use the forms \emph{rhaa/rhii/rhe} in place of \emph{raa/rii/re}, and skip the ending auxiliary.
 \item
 Variant forms of \textit{ko}
 \end{itemize}
@@ -209,9 +326,25 @@ Variant forms of \textit{ko}
 \subsection{Verb Root + Inflectional Suffixes, Infinitives}
 
 \subsubsection{Subjunctive}
+
+\begin{itemize}
+\item
+The subjunctive form is formed exactly as in standard urdu
+\item
+The plural form of the subjunctive, ending in -eN, is not found in Dakhini
+\end{itemize}
+
 \subsubsection{Verb root + zero suffix = imperative}
+
+The pronoun 'tuu', plus an infinite form of the verb with zero sffix, forms the imperative.
+
 \subsubsection{Subjunctive + gaa/gii = Future Tense}
+
+The future tense is formed by the addition of \emph{-gaa/-gii/-ge} to the base provided by the subjunctive form.
+
 \subsubsection{Verb Root + naa = Infinitive}
+
+The infinitive is formed by the addition of \emph{-naa} to the verb root.
 
 \subsubsection{Variations}
 
@@ -224,7 +357,6 @@ Non-use of the future tense terminating in \textit{gaa}
 Formation of the infinitive by the suffixation of \textit{-aunaa} rather than \textit{naa}
 \end{itemize}
 
-\subsection{Auxiliary Verbs}
 
 \section{The Primary System of Dakhini Urdu}
 
