added some notes

--- a/language_typology_and_universals/README.org
+++ b/language_typology_and_universals/README.org
@@ -38,8 +38,8 @@ This index is an attempt to collate the work done throughout the semester into a
 
 ** Paper by M.B Emeneau
 ** Paper by Anvita Abbi
-** Comparisions
-* Some Phenomena Studied
+
+* Analysis of Specific Linguistic Phenomena
 
 ** Causatives
 ** Relative Clause Formation
