added notes on sphota

--- a/computational-linguistics/language_typology_and_universals/README.org
+++ b/computational-linguistics/language_typology_and_universals/README.org
@@ -32,6 +32,9 @@ This index is an attempt to collate the work done throughout the semester into a
 
 *** Language Acquisition
 *** Language Loss
+
+Happens in the reverse process as language acquisition.
+
 *** Aphasia
 
 **** Wernicke's Aphasia
